fix(header): spacing between text and icons

--- a/apps/web/src/pages/project/components/header/header.module.scss
+++ b/apps/web/src/pages/project/components/header/header.module.scss
@@ -19,8 +19,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
   gap: g.$padding-xsm;
+}
+
+.text {
+  margin-right: auto;
 }
 
 .skip {
